fix nano address characters being vertically cutoff in the account dropdown

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -410,7 +410,7 @@
 		justify-content: space-between;
 		background: @nav-tooltip-color-background;
 		border-bottom: 1px solid #1C1F28;
-		padding: 8px;
+		padding: 8px 8px 6px 8px;
 		cursor: pointer;
 		transition: background-color 100ms ease-in-out;
 
@@ -448,6 +448,7 @@
 
 			> .address {
 				font-size: 12px;
+				padding-bottom: 2px;
 				transition: color 100ms ease-in-out;
 				.truncated-text();
 			}
@@ -498,6 +499,7 @@
 				&.converted {
 					font-size: 12px;
 					white-space: nowrap;
+					padding-bottom: 2px;
 					transition: color 100ms ease-in-out;
 				}
 			}
